--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Vite App</title>
 </head>
 <body>
-<img src="#">
+<main>
+    <div>
+        <input type="text" name="searchbar" id="searchbar">
+        <button type="submit" class="search-weather">Search</button>
+    </div>
+</main>
+
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
