Added converting of °C and °F

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     </div>
 
     <footer>
-        <div class="felt-temperatur">
+        <div>
             <p class="footer-title">FEELS LIKE</p>
-            <p class="footer-value">13°</p>
+            <p class="footer-value felt-temperatur"></p>
         </div>
-        <div class="sunrise">
+        <div>
             <p class="footer-title">SUNRISE</p>
-            <p class="footer-value">06:30</p>
+            <p class="footer-value sunrise"></p>
         </div>
-        <div class="sunset">
+        <div>
             <p class="footer-title">SUNSET</p>
-            <p class="footer-value">20:30</p>
+            <p class="footer-value sunset"></p>
         </div>
     </footer>
 </main>
