Refactored design of hourly weather

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
             <p class="today-high-low-temperatur"></p>
         </div>
         <div class="forecast">
-
         </div>
     </div>
-
+    <template id="weatherByHour-template">
+        <p class="hour"></p>
+        <img src="" alt="weatherIcon" id="weatherIcon">
+        <p class="temperaturByHour"></p>
+    </template>
     <footer>
         <div>
             <p class="footer-title">FEELS LIKE</p>
