Added loading button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="forecast">
         </div>
     </div>
+    <div class="loader"></div>
     <template id="weatherByHour-template">
         <p class="hour"></p>
         <img src="" alt="weatherIcon" id="weatherIcon">
